# Complete-MCP-Server-Mastery-With-Langchain-And-Ollama

./: main.py  pyproject.toml
02 Building First MCP Server/demo-server/: server.py
02 Building First MCP Server/weather/: client.py  server.py
Architectures/: architecture_of_mcp_server.html
